0.3.5.16
  - (kurtnoise) add FLAC files support in the Matroska Muxer
  - (sharktooth) [x264] fixed unselectable CABAC option in Main and High profiles
  - (sharktooth) added new application and uninstaller icons
  - (zathor) [MP4 Muxer] fixed temp directory handling
  - (zathor) [MKV Muxer] enhanced error handling

0.3.5.15
  - (zathor) fixed status overlay icon not showing up
  - (zathor) [VideoPlayer] fixed playing last frame. Bug #3072660

0.3.5.14
  - (zathor) fixed AR chooser displaying always 16:9 PAL e.g. in VideoPlayer or AVS Script Creator
  - (zathor) fixed saving of custom quantizer matrices in x264/xvid profiles. Bug #3070834

0.3.5.13
  - (sharktooth) [x264Encoder] Removed unnecessary/wrong code
  - (sharktooth) [x264] Fixed commandline generation when switching between AVC profiles
  - (sharktooth) [x264] Removed touhou tuning option
  - (sharktooth) [x264] Fix commandline generation with tunings
  - (sharktooth) [x264] Fixed Psy-RD settings commandline generation with certain tunings
  - (sharktooth) [VideoPlayer] added a check to stop the player before reloading the video
  - (zathor) [Queue] if a worker tries to start an audio job while another
             audio job is already running the worker will be postponed.
  - (zathor) added overlay icon if a warning or error event has been logged (Windows 7 only)
  - (zathor) removed the embedded changelog. instead the changelog.txt will be opened

0.3.5.12
  - (zathor) [FileIndexer] disable DGIndexNV in a RDP session
  - (zathor) [VidePlayerControl] added new control to speed up 
             video navigation. Patch by aKzenT (#1902576)
  - (zathor) [VidePlayer] some cosmetics
  - (zathor) [VidePlayer] added option to reload the video. Feature request #3003709

0.3.5.11
  - (zathor) [x264] fixed more than one --sar in the command line. Bug #3038722
  - (zathor) [MuxWindow] added a unique title to every mux window. Feature request #2937578